--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ to your account.</p>
 <div class="generator-button-dot b-b-r"></div>
 <div class="generator-button-dot b-b-l"></div>
 <div class="generator-button-overlay"></div>
-<a  half="https://verifysuper.com/cl/i/42p9w5" onclick="og_load()" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
+<a  href="https://verifysuper.com/cl/i/42p9w5" id="first-step-button-verify" class="generator-button first-step-button"><span class="generator-button-text">Verify</span></a>
 </div>
 </div>
 <div id="fountainG">
